--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
             <!-- Call to Action Button: Styled like a native Android button with ripple effect -->
             <a id="cta-button"
-               href="https://netsus.me/netsus" 
+               href="https://netsus.me/Netsus" 
                class="relative inline-block w-full max-w-xs bg-blue-600 text-white font-bold text-lg px-8 py-4 rounded-full shadow-lg overflow-hidden
                       hover:bg-blue-700 transition-transform duration-300 ease-in-out transform hover:scale-105 
                       focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50">
